@@ -1,6 +1,6 @@
 Requires:
 ~~~~~~~~~
--
+- python2.4
 New features:
 ~~~~~~~~~~~~~
 - API : enable / disable EventManager
@@ -20,3 +20,7 @@ New internal features:
 - EventManager cleanups
   o use logging instead of the zLOG
   o use zope.interface
+- API changes :
+  o EventManager -> EventSusbcriptionsManager
+  o get_event_manager -> get_event_subscriptions_manager
+  o del_event_manager -> del_event_subscriotions_manager
